force-app/main/default/objects/Monthly_PUMV__c/Monthly_PUMV__c.object-meta.xml
<CustomObject>
    <label>Monthly PUMV</label>
    <nameField>
        <displayFormat>PUMV-{00000000}</displayFormat>
        <label>Monthly PUMV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly PUMVs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>