force-app/main/default/objects/Monthly_PUMV__c/fields/Billing_Territory__c.field-meta.xml
<CustomField>
    <fullName>Billing_Territory__c</fullName>
    <label>Billing Territory</label>
    <referenceTo>Billing_Territory__c</referenceTo>
    <relationshipLabel>Monthly PUMVs</relationshipLabel>
    <relationshipName>Monthly_PUMVs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>