force-app/main/default/objects/Monthly_PUMV__c/fields/PUMV_Cube__c.field-meta.xml
<CustomField>
    <fullName>PUMV_Cube__c</fullName>
    <label>PUMV Cube</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>